[package]
name = "fog-human-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fog-pack = "0.2"
serde_json = "1"
base64 = "0.21"
chrono = "0.4"
hex = "0.4"
ryu = "1"
thiserror = "1"
fog-crypto = "0.4"
