[package]
name = "fog-human-json"
version = "0.1.0"
edition = "2021"
authors = ["Scott Teal"]
readme = "README.md"
keywords = ["fog-pack", "json"]
categories = [ "encoding" ]
description = "Human-readable fog-pack data, through JSON."
repository = "https://github.com/Cognoscan/fog-human-json"
homepage = "https://github.com/Cognoscan/fog-human-json"
documentation = "https://docs.rs/fog-human-json"
license = "MIT OR Apache-2.0"

[dependencies]
fog-pack = "0.2"
serde_json = "1"
base64 = "0.21"
chrono = "0.4"
hex = "0.4"
ryu = "1"
thiserror = "1"
fog-crypto = "0.4"
